--- a/apps/app/ui-tests-app/image-view/font-icon.css
+++ b/apps/app/ui-tests-app/image-view/font-icon.css
@@ -1,5 +1,11 @@
 .font-awesome {
     font-family: "FontAwesome";
+}
+
+.font-size {
     font-size: 96;
-    color: red;
+}
+
+.color {
+    color: blue;
 }
